--- a/Hello/templates/index.html
+++ b/Hello/templates/index.html
@@ -54,7 +54,6 @@ Home{% endblock title %}
 
 
   <main>
-
     <div id="myCarousel" class="carousel slide pointer-event" data-bs-ride="carousel">
       <div class="carousel-indicators">
         <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" class="" aria-label="Slide 1"></button>
@@ -70,27 +69,7 @@ Home{% endblock title %}
             
             <div class="container">
               <div class="carousel-caption text-end">
-                <div class="header">
-                  <form>
-                    <div class="form-box text-center" style="background: rgba(0,0,0, 0.5); padding: 30px;">
-                      <div class="input-group">
-                        <input type="text" class="col-4" aria-label="Text input with dropdown button">
-                        <div class="input-group-append">
-                          <button class="btn btn-outline-secondary dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</button>
-                          <div class="dropdown-menu">
-                            <a class="dropdown-item" href="#">Action</a>
-                            <a class="dropdown-item" href="#">Another action</a>
-                            <a class="dropdown-item" href="#">Something else here</a>
-                            <div role="separator" class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="#">Separated link</a>
-                          </div>
-                        </div>
-                        <input type="text" class="search-field location px-2" style="height: 50px; border: none; width: 200px; border-radius: 20px; outline: none; padding: 10px;" placeholder="Baby age">
-                      <button style="height: 50px; border:none; border-radius: 20px; color: #fff; width: 150px; background: #000; padding: 10px;" class="search-btn" type="button">Search</button>
-                      </div>
-                    </div>
-                  </form>
-                </div>
+                
                 <div class="header">
                   <form>
                     <h1 style="color: #800000;">Find Children Closet Easily</h1>
@@ -108,15 +87,7 @@ Home{% endblock title %}
 
             <div class="container">
               <div class="carousel-caption text-end">
-                <div class="header">
-                  <form>
-                    <div class="form-box text-center"style="background: rgba(0,0,0, 0.5); padding: 30px;">
-                      <input type="text" style="height: 50px; border: none; border-radius: 20px; outline: none; width: 400px; padding: 10px;" class="search-field business" placeholder="Dress">
-                      <input type="text" class="search-field location" style="height: 50px; border: none; width: 200px; border-radius: 20px; outline: none; padding: 10px;" placeholder="Baby age">
-                      <button style="height: 50px; border:none; border-radius: 20px; color: #fff; width: 150px; background: #000;" class="search-btn" type="button">Search</button>
-                    </div>
-                  </form>
-                </div>
+                
                 <div class="header">
                   <form>
                     <h1 style="color: #800000;">Find Children Closet Easily</h1>
@@ -134,15 +105,6 @@ Home{% endblock title %}
 
             <div class="container">
               <div class="carousel-caption text-end">
-                <div class="header">
-                  <form>
-                    <div class="form-box text-center" style="background: rgba(0,0,0, 0.5); padding: 30px;">
-                      <input type="text" style="height: 50px; border: none; border-radius: 20px; outline: none; width: 400px; padding: 10px;" class="search-field business" placeholder="Dress">
-                      <input type="text" class="search-field location" style="height: 50px; border: none; width: 200px; border-radius: 20px; outline: none; padding: 10px;" placeholder="Baby age">
-                      <button style="height: 50px; border:none; border-radius: 20px; color: #fff; width: 150px; background: #000;" class="search-btn" type="button">Search</button>
-                    </div>
-                  </form>
-                </div>
                 <div class="header">
                   <form>
                     <h1 style="color: #800000;">Find Children Closet Easily</h1>
@@ -163,7 +125,33 @@ Home{% endblock title %}
         <span class="visually-hidden">Next</span>
       </button>
     </div>
-
+    <div class="container my-3">
+      <div class="header">
+        <form>
+          <div class="form-box text-center"style="background: rgba(0,0,0, 0.5); padding: 30px;">
+            <select style="border-radius: 20px;" class=" col-6 form-select-lg mb-3" aria-label=".form-select-lg example">
+              <option selected>Choose the Dress Categories</option>
+              <option value="1">One</option>
+              <option value="2">Two</option>
+              <option value="3">Three</option>
+            </select> 
+            <select style="border-radius: 20px;" class=" col-2 form-select-lg mb-3" aria-label=".form-select-lg example">
+              <option selected>Gender</option>
+              <option value="1">One</option>
+              <option value="2">Two</option>
+              <option value="3">Three</option>
+            </select>
+            <select style="border-radius: 20px;" class=" col-2 form-select-lg mb-3" aria-label=".form-select-lg example">
+              <option selected>Age</option>
+              <option value="1">One</option>
+              <option value="2">Two</option>
+              <option value="3">Three</option>
+            </select>
+            <button style="border-radius: 20px;" type="button" class="btn btn-dark mb-2 btn-lg">Quick Search</button>
+          </div>
+        </form>
+      </div> 
+    </div>
 
     <div class="album py-5 bg-light mb-1">
       <div class="container my-2">
