--- a/Hello/templates/services.html
+++ b/Hello/templates/services.html
@@ -1,3 +1,148 @@
 {% extends 'base.html' %}
 {% block title %}Services{% endblock %}
-{% block body %}This is Service page{% endblock body %}
+{% block body %}
+<div class="container my-4">
+
+<hr class="mb-5"/>
+
+<!--Carousel Wrapper-->
+<div id="multi-item-example" class="carousel slide carousel-multi-item" data-ride="carousel">
+
+<!--/.Controls-->
+
+<!--Indicators-->
+<ul class="carousel-indicators">
+  <li data-target="#demo" data-slide-to="0" class="active"></li>
+  <li data-target="#demo" data-slide-to="1"></li>
+  <li data-target="#demo" data-slide-to="2"></li>
+  
+</ul>
+<!--/.Indicators-->
+
+<!--Slides-->
+<div class="carousel-inner" role="listbox">
+
+  <!--First slide-->
+  <div class="carousel-item active">
+
+    <div class="col-md-3" style="float:left">
+     <div class="card mb-2">
+        <img class="card-img-top"
+          src="https://mdbootstrap.com/img/Photos/Horizontal/City/4-col/img%20(60).jpg" alt="Card image cap">
+        <div class="card-body">
+          <h4 class="card-title">Card title</h4>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+            card's content.</p>
+          <a class="btn btn-primary">Button</a>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-md-3" style="float:left">
+      <div class="card mb-2">
+        <img class="card-img-top"
+          src="https://mdbootstrap.com/img/Photos/Horizontal/City/4-col/img%20(60).jpg" alt="Card image cap">
+        <div class="card-body">
+          <h4 class="card-title">Card title</h4>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+            card's content.</p>
+          <a class="btn btn-primary">Button</a>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-md-3" style="float:left">
+      <div class="card mb-2">
+        <img class="card-img-top"
+          src="https://mdbootstrap.com/img/Photos/Horizontal/City/4-col/img%20(60).jpg" alt="Card image cap">
+        <div class="card-body">
+          <h4 class="card-title">Card title</h4>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+            card's content.</p>
+          <a class="btn btn-primary">Button</a>
+        </div>
+      </div>
+    </div>
+    
+     <div class="col-md-3" style="float:left">
+     <div class="card mb-2">
+        <img class="card-img-top"
+          src="https://mdbootstrap.com/img/Photos/Horizontal/City/4-col/img%20(60).jpg" alt="Card image cap">
+        <div class="card-body">
+          <h4 class="card-title">Card title</h4>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+            card's content.</p>
+          <a class="btn btn-primary">Button</a>
+        </div>
+      </div>
+    </div>
+
+  </div>
+  <!--/.First slide-->
+
+  <!--Second slide-->
+  <div class="carousel-item">
+
+    <div class="col-md-3" style="float:left">
+      <div class="card mb-2">
+        <img class="card-img-top"
+          src="https://mdbootstrap.com/img/Photos/Horizontal/City/4-col/img%20(60).jpg" alt="Card image cap">
+        <div class="card-body">
+          <h4 class="card-title">Card title</h4>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+            card's content.</p>
+          <a class="btn btn-primary">Button</a>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-md-3" style="float:left">
+      <div class="card mb-2">
+        <img class="card-img-top"
+          src="https://mdbootstrap.com/img/Photos/Horizontal/City/4-col/img%20(47).jpg" alt="Card image cap">
+        <div class="card-body">
+          <h4 class="card-title">Card title</h4>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+            card's content.</p>
+          <a class="btn btn-primary">Button</a>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-md-3" style="float:left">
+      <div class="card mb-2">
+        <img class="card-img-top"
+          src="https://mdbootstrap.com/img/Photos/Horizontal/City/4-col/img%20(48).jpg" alt="Card image cap">
+        <div class="card-body">
+          <h4 class="card-title">Card title</h4>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+            card's content.</p>
+          <a class="btn btn-primary">Button</a>
+        </div>
+      </div>
+    </div>
+    
+    <div class="col-md-3" style="float:left">
+      <div class="card mb-2">
+        <img class="card-img-top"
+          src="https://mdbootstrap.com/img/Photos/Horizontal/City/4-col/img%20(47).jpg" alt="Card image cap">
+        <div class="card-body">
+          <h4 class="card-title">Card title</h4>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+            card's content.</p>
+          <a class="btn btn-primary">Button</a>
+        </div>
+      </div>
+    </div>
+
+  </div>
+  <!--/.Second slide-->
+
+ 
+
+</div>
+<!--/.Slides-->
+
+</div>
+<!--/.Carousel Wrapper-->
+{% endblock body %}
