--- a/Hello/templates/test.html
+++ b/Hello/templates/test.html
@@ -1,5 +1,8 @@
 <!doctype html>
+{% extends 'base.html' %}
+{% block title %}OnTest{% endblock title %}
 <html lang="en">
+{% block body %}
 
 <head>
     <!-- Required meta tags -->
@@ -23,15 +26,17 @@
         }
 
         .carousel-control-prev-icon {
-            background: no-repeat center center;
-            background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8' fill='%23fff'%3e%3cpath d='M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z'/%3e%3c/svg%3e");
+            background: #800000 no-repeat center center;
+            background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23fff'%3e%3cpath d='M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z'/%3e%3c/svg%3e");
         }
 
         .carousel-control-next-icon {
-            background: no-repeat center center;
+            background: #800000 no-repeat center center;
             background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23fff'%3e%3cpath d='M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
 
         }
+
+
 
         .col-md-3 img {
             max-width: 255px;
@@ -42,6 +47,9 @@
         body .carousel-indicators {
             bottom: 0;
         }
+        body .no-padding{
+           padding-left: 0,
+           }
     </style>
 </head>
 
@@ -53,10 +61,10 @@
 
 
         <div id="carouselExampleControl" class="carousel slide" data-bs-ride="carousel">
-            <div class="carousel-inner text-center">
+            <div class="carousel-inner no-padding text-center">
                 <div class="carousel-item active">
-            
-                
+
+
                     {% for i in product %}
                     <div class="col-xs-3 col-sm-3 col-md-3">
                         <div class="card text-center" style="width: 18rem;">
@@ -65,6 +73,7 @@
                                 <h5 class="card-title">{{i.product_name}}</h5>
                                 <p class="card-text">{{i.desc}}</p>
                                 <a href="#" id="pr{{i.id}}" class="btn btn-primary cart">Add To Cart</a>
+                                <a href="/product/{{i.id}}" id="qv{{i.id}}" class="btn btn-primary">View Product</a>
                             </div>
                         </div>
                     </div>
@@ -77,19 +86,24 @@
 
                     {% endfor %}
                 </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControl"
+                
+            </div>
+            <button class="carousel-control-prev" style="width: 5rem;" type="button" data-bs-target="#carouselExampleControl"
                     data-bs-slide="prev">
                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                     <span class="visually-hidden">Previous</span>
                 </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControl"
+                <button class="carousel-control-next" style="width: 5rem;" type="button" data-bs-target="#carouselExampleControl"
                     data-bs-slide="next">
                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
                     <span class="visually-hidden">Next</span>
                 </button>
-            </div>
         </div>
     </div>
+    <button type="button" class="btn btn-secondary" data-bs-container="body" data-bs-toggle="popover" data-bs-placement="bottom" data-bs-content="Bottom popover">
+        Popover on bottom
+      </button>
+      
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
@@ -107,7 +121,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js"
         integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT"
         crossorigin="anonymous"></script>
-    -->
+    
 </body>
 
 </html>
@@ -121,6 +135,7 @@
     else {
         cart = JSON.parse(localStorage.getItem('cart'));
         console.log(cart);
+        document.getElementById('cart').innerHTML = Object.keys(cart).length;
     }
     $('.cart').click(function () {
         var idstr = this.id.toString();
@@ -132,6 +147,8 @@
         }
         console.log(cart);
         localStorage.setItem('cart', JSON.stringify(cart));
+        document.getElementById('cart').innerHTML = Object.keys(cart).length;
     });
 </script>
 {% endblock js %}
+{% endblock body %}
