--- a/Hello/templates/product.html
+++ b/Hello/templates/product.html
@@ -5,7 +5,7 @@
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
     
-<div class="container my-5 ">
+<div class="container my-5">
     <div class="row">
         <div class="col-md-4">
             <img src="/media/{{prod.image}}" alt="" width="300px" height="350px">
@@ -17,7 +17,7 @@
             </h1>
             <div class="row">
                 <button type="button" class="btn btn-outline-dark btn-sm mx-3" style="width: 100px;">Buy Now</button>
-                <button type="button" class="btn btn-outline-dark btn-sm cart" style="width: 100px;">Add To Cart</button>
+                <button type="button" id="pr{{prod.id}}" class="btn btn-outline-dark btn-sm cart" style="width: 100px;">Add To Cart</button>
             </div>
             <p class="my-2 mx-1"><b>Rs. {{prod.price}}</b></p>
             <p class="my-5">{{prod.desc}}</p>
@@ -25,30 +25,36 @@
     </div>
 </div>
 {% block js %}
-    <script>
-      console.log('working');
-      if (localStorage.getItem('cart') == null) {
+<script>
+      
+      if(localStorage.getItem('cart') == null){
+        console.log("nothing")
         var cart = {}
-        console.log(cart);
       }
-      else {
+      else{
         cart = JSON.parse(localStorage.getItem('cart'));
-        console.log(cart);
-        document.getElementById('cart').innerHTML = Object.keys(cart).length;
+         document.getElementById('cart_quantity').innerHTML = Object.keys(cart).length;
+        document.getElementById('cart_quantity1').innerHTML = Object.keys(cart).length;
       }
-      $('.cart').click(function () {
-        var idstr = this.id.toString();
-        if (cart[idstr] != undefined) {
-          cart[idstr] = cart[idstr] + 1;
+      $('.cart').click(function(){
+        console.log('click')
+        var idString = this.id.toString();
+        console.log(idString)
+        if(cart[idString] != undefined){
+          cart[idString] += 1;
         }
-        else {
-          cart[idstr] = 1;
+        else{
+          cart[idString] = 1
         }
-        console.log(cart);
-        localStorage.setItem('cart', JSON.stringify(cart));
-        document.getElementById('cart').innerHTML = Object.keys(cart).length;
-      });
+        localStorage.setItem('cart',JSON.stringify(cart))
+        
+        document.getElementById('cart_quantity').innerHTML = Object.keys(cart).length;
+        document.getElementById('cart_quantity1').innerHTML = Object.keys(cart).length;
+      })
     </script>
+
 {% endblock js %}
+
+
 {% endblock body %}
 
